--- a/index.html
+++ b/index.html
@@ -280,6 +280,80 @@
                                 Purchase Now <i class="ri-arrow-right-line"></i>
                             </a>
                         </article>
+
+                        <article class="pricing__card">
+                            <header class="pricing__header">
+                                <div class="pricing__shape">
+                                    <img src="assets/img/pricing2.png" alt="pricing image" class="pricing__img">
+                                </div>
+
+                                <h1 class="pricing__title">PREMIUM PACKAGE</h1>
+                                <h2 class="pricing__number">$240</h2>
+                            </header>
+
+                            <ul class="pricing__list">
+                                <li class="pricing__item">
+                                    <i class="ri-checkbox-circle-line"></i> 5 Days In A Week
+                                </li>
+
+                                <li class="pricing__item">
+                                    <i class="ri-checkbox-circle-line"></i> 01 Sweatshirt
+                                </li>
+
+                                <li class="pricing__item">
+                                    <i class="ri-checkbox-circle-line"></i> 01 Bottle of Protein
+                                </li>
+
+                                <li class="pricing__item">
+                                    <i class="ri-checkbox-circle-line"></i> Access to Videos
+                                </li>
+
+                                <li class="pricing__item">
+                                    <i class="ri-checkbox-circle-line"></i> Muscle Stretching
+                                </li>
+                            </ul>
+
+                            <a href="#" class="button button__flex pricing__button">
+                                Purchase Now <i class="ri-arrow-right-line"></i>
+                            </a>
+                        </article>
+
+                        <article class="pricing__card">
+                            <header class="pricing__header">
+                                <div class="pricing__shape">
+                                    <img src="assets/img/pricing3.png" alt="pricing image" class="pricing__img">
+                                </div>
+
+                                <h1 class="pricing__title">DIAMOND PACKAGE</h1>
+                                <h2 class="pricing__number">$420</h2>
+                            </header>
+
+                            <ul class="pricing__list">
+                                <li class="pricing__item">
+                                    <i class="ri-checkbox-circle-line"></i> 5 Days In A Week
+                                </li>
+
+                                <li class="pricing__item">
+                                    <i class="ri-checkbox-circle-line"></i> 01 Sweatshirt
+                                </li>
+
+                                <li class="pricing__item">
+                                    <i class="ri-checkbox-circle-line"></i> 01 Bottle of Protein
+                                </li>
+
+                                <li class="pricing__item">
+                                    <i class="ri-checkbox-circle-line"></i> Access to Videos
+                                </li>
+
+                                <li class="pricing__item">
+                                    <i class="ri-checkbox-circle-line"></i> Muscle Stretching
+                                </li>
+                            </ul>
+
+                            <a href="#" class="button button__flex pricing__button">
+                                Purchase Now <i class="ri-arrow-right-line"></i>
+                            </a>
+                        </article>
                     </div>
                 </div>
             </section>
