--- a/index.html
+++ b/index.html
@@ -263,15 +263,15 @@
                                     <i class="ri-checkbox-circle-line"></i> 01 Sweatshirt
                                 </li>
 
-                                <li class="pricing__item">
+                                <li class="pricing__item pricing__item-opacity ">
                                     <i class="ri-checkbox-circle-line"></i> 01 Bottle of Protein
                                 </li>
 
-                                <li class="pricing__item">
+                                <li class="pricing__item pricing__item-opacity ">
                                     <i class="ri-checkbox-circle-line"></i> Access to Videos
                                 </li>
 
-                                <li class="pricing__item">
+                                <li class="pricing__item pricing__item-opacity ">
                                     <i class="ri-checkbox-circle-line"></i> Muscle Stretching
                                 </li>
                             </ul>
@@ -281,7 +281,7 @@
                             </a>
                         </article>
 
-                        <article class="pricing__card">
+                        <article class="pricing__card pricing__card-active">
                             <header class="pricing__header">
                                 <div class="pricing__shape">
                                     <img src="assets/img/pricing2.png" alt="pricing image" class="pricing__img">
@@ -304,11 +304,11 @@
                                     <i class="ri-checkbox-circle-line"></i> 01 Bottle of Protein
                                 </li>
 
-                                <li class="pricing__item">
+                                <li class="pricing__item pricing__item-opacity ">
                                     <i class="ri-checkbox-circle-line"></i> Access to Videos
                                 </li>
 
-                                <li class="pricing__item">
+                                <li class="pricing__item pricing__item-opacity ">
                                     <i class="ri-checkbox-circle-line"></i> Muscle Stretching
                                 </li>
                             </ul>
