--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="#home" class="nav__link">Home</a>
+                            <a href="#home" class="nav__link active-link">Home</a>
                         </li>
 
                         <li class="nav__item">
@@ -508,7 +508,7 @@
 
         <!--=============== EMAIL JS ===============-->
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-                
+
         <!--=============== MAIN JS ===============-->
         <script src="assets/js/main.js"></script>
     </body>
