add responsive styles for small and medium devices

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                             <h1 class="section__title">YOUR BMI</h1>
                         </div>
 
-                        <p class="czlculate__description">
+                        <p class="calculate__description">
                             The body mass index (BMI) calculator calculates
                             body mass index from your weight and height.
                         </p>
